methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:2: error: not enough arguments for method faireVYellow: (c: java.awt.Color)Unit.
Unspecified value parameter c.
    faireVYellow() ;
                ^MethodsPicture:3: error: not enough arguments for method faireVRed: (c: java.awt.Color)Unit.
Unspecified value parameter c.
    faireVRed()
             ^MethodsPicture:4: error: not enough arguments for method faireVBlue: (c: java.awt.Color)Unit.
Unspecified value parameter c.
    faireVBlue()
              ^MethodsPicture:5: error: not enough arguments for method faireVGreen: (c: java.awt.Color)Unit.
Unspecified value parameter c.
    faireVGreen()
               ^MethodsPicture:45: error: value Green is not a member of object java.awt.Color
    setCouleurBrosse(Color.Green)
                           ^